
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint64_t ;


 int MAP_ANONYMOUS ;
 void* MAP_FAILED ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SIZE ;
 int err (int,char*) ;
 void* mmap (void*,int ,int,int,int,int ) ;

__attribute__((used)) static void *map_mem(uint64_t addr)
{
 void *p;

 p = mmap((void*) addr, SIZE, PROT_READ | PROT_WRITE,
   MAP_ANONYMOUS | MAP_PRIVATE | MAP_FIXED, -1, 0);

 if (p == MAP_FAILED)
  err(1, "mmap()");

 return p;
}
